Initial design work

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about</title>
+    <title>sl.zy | About</title>
 
     <!--  Basic Info  -->
     <meta name="description" content="Silzy's online portfolio and playground.">
@@ -19,14 +19,17 @@
 <body>
     <nav>
         <a href="index.html">[sl.zy]</a>
-        <a href="about.html">about</a>
+        <a href="about.html" class="active">about</a>
         <a href="projects.html">projects</a>
         <a href="socials.html">socials</a>
     </nav>
-    <hr>
-    <div class="projects">
-        <header>about me.</header>
-    </div>
 
+<main>
+    <div class="about">
+        <header>about me.</header>
+        <h3>--------------------</h3>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    </div>
+</main>
 </body>
 </html>
