--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sl.zy</title>
+    <title>[sl.zy] | Start</title>
 
     <!--  Basic Info  -->
     <meta name="description" content="Silzy's online portfolio and playground.">
@@ -17,23 +17,25 @@
 
 </head>
 <body>
+<div class="background"></div>
     <nav>
-        <a href="index.html">[sl.zy]</a>
+        <a href="index.html" class="active">[sl.zy]</a>
         <a href="about.html">about</a>
         <a href="projects.html">projects</a>
         <a href="socials.html">socials</a>
     </nav>
-    <hr>
 
-    <header class="ascii-art">    |\      _,,,---,,_
-ZZZzz  /,`.-'`'    -.  ;-;;,_
-        |,4-  ) )-,_. ,\ (  `'-'
-   '---''(_/--'  `-'\_)
-    </header>
+<main>
     <div class="start-page">
+<header class="ascii-art">    |\      _,,,---,,_
+ZZZzz  /,`.-'`'    -.  ;-;;,_
+       |,4-  ) )-,_. ,\ (  `'-'
+  '---''(_/--'  `-'\_)
+</header>
+        <h3>--------------------</h3>
         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-
     </div>
+</main>
 
 
 </body>
