--- a/socials.html
+++ b/socials.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>socials</title>
+    <title>sl.zy | Socials</title>
 
     <!--  Basic Info  -->
     <meta name="description" content="Silzy's online portfolio and playground.">
@@ -21,21 +21,20 @@
         <a href="index.html">[sl.zy]</a>
         <a href="about.html">about</a>
         <a href="projects.html">projects</a>
-        <a href="socials.html">socials</a>
+        <a href="socials.html" class="active">socials</a>
     </nav>
-    <hr>
 
+<main>
     <div class="socials">
         <header>You can find my work and get in touch with me on these platforms.</header>
         <div class="socials-box">
-            <h2 class="box-title">Socials</h2>
             <p>Discord: silzy</p>
             <p>Twitter/X: <a href="https://x.com/xSilzy" target="_blank">https://x.com/xSilzy</a></p>
             <p>Github: <a href="https://github.com/xSilzy" target="_blank">https://github.com/xSilzy</a></p>
             <p>itch.io: <a href="https://silzy.itch.io" target="_blank">https://silzy.itch.io</a></p>
         </div>
     </div>
-
+</main>
 
 
 </body>
